--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -14,6 +14,8 @@ dependencies:
     path: ../
 
   cupertino_icons: ^1.0.2
+  flutter_downloader: ^1.8.3
+  path_provider: ^2.0.11
 
 dev_dependencies:
   flutter_test:
